--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
 	"name": "CloneBot",
 	"description": "CloneBot",
-	"repository": "https://github.com/MsGsuite/CloneBot",
+	"repository": "https://github.com/cineserver1/CloneBot",
 	"keywords": ["Gclone","TG"],
 	"env": {
 		"BOT_TOKEN": {
